--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,4 @@
 [submodule "vim/bundle/vim-unimpaired"]
 	path = vim/bundle/vim-unimpaired
 	url = https://github.com/tpope/vim-unimpaired
+	ignore = dirty
