--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 	path = vim/bundle/vim-unimpaired
 	url = https://github.com/tpope/vim-unimpaired
 	ignore = dirty
+[submodule "vim/bundle/pyflakes"]
+	path = vim/bundle/pyflakes
+	url = git://github.com/kevinw/pyflakes-vim.git
