--- a/.gitmodules
+++ b/.gitmodules
@@ -78,3 +78,6 @@
 	path = vim/bundle/SearchComplete
 	url = http://github.com/vim-scripts/SearchComplete.git
 	ignore = dirty
+[submodule "vim/bundle/vim-powerline"]
+	path = vim/bundle/vim-powerline
+	url = https://github.com/dmayle/vim-powerline.git
