Patch to full working version of vim-powerline with colorscheme and trailing whitespace indicator

--- a/.gitmodules
+++ b/.gitmodules
@@ -81,3 +81,4 @@
 [submodule "vim/bundle/vim-powerline"]
 	path = vim/bundle/vim-powerline
 	url = https://github.com/dmayle/vim-powerline.git
+	ignore = dirty
