--- a/.gitmodules
+++ b/.gitmodules
@@ -90,3 +90,6 @@
 	path = vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic
 	ignore = dirty
+[submodule "vim/bundle/sessionman"]
+	path = vim/bundle/sessionman
+	url = https://github.com/vim-scripts/sessionman.vim
