--- a/.gitmodules
+++ b/.gitmodules
@@ -93,6 +93,8 @@
 [submodule "vim/bundle/sessionman"]
 	path = vim/bundle/sessionman
 	url = https://github.com/vim-scripts/sessionman.vim
+	ignore = dirty
 [submodule "vim/bundle/vim-visual-increment"]
 	path = vim/bundle/vim-visual-increment
 	url = https://github.com/triglav/vim-visual-increment
+	ignore = dirty
