--- a/.gitmodules
+++ b/.gitmodules
@@ -98,3 +98,7 @@
 	path = vim/bundle/vim-visual-increment
 	url = https://github.com/triglav/vim-visual-increment
 	ignore = dirty
+[submodule "vim/bundle/gundo"]
+	path = vim/bundle/gundo
+	url = https://github.com/sjl/gundo.vim
+	ignore = dirty
