--- a/.gitmodules
+++ b/.gitmodules
@@ -98,3 +98,7 @@
 	path = vim/bundle/delimitMate
 	url = https://github.com/Raimondi/delimitMate/
 	ignore = dirty
+[submodule "vim/bundle/a.vim"]
+	path = vim/bundle/a.vim
+	url = https://github.com/vim-scripts/a.vim
+	ignore = dirty
