--- a/.gitmodules
+++ b/.gitmodules
@@ -102,3 +102,6 @@
 	path = vim/bundle/a.vim
 	url = https://github.com/vim-scripts/a.vim
 	ignore = dirty
+[submodule "vim/bundle/vim-easymotion"]
+	path = vim/bundle/vim-easymotion
+	url = https://github.com/Lokaltog/vim-easymotion
