--- a/.gitmodules
+++ b/.gitmodules
@@ -105,3 +105,4 @@
 [submodule "vim/bundle/vim-easymotion"]
 	path = vim/bundle/vim-easymotion
 	url = https://github.com/Lokaltog/vim-easymotion
+	ignore = dirty
