--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,7 @@
 	path = vim/bundle/vim-easymotion
 	url = https://github.com/Lokaltog/vim-easymotion
 	ignore = dirty
+[submodule "vim/bundle/ctrlp"]
+	path = vim/bundle/ctrlp
+	url = https://github.com/kien/ctrlp.vim
+	ignore = dirty
