--- a/.gitmodules
+++ b/.gitmodules
@@ -110,3 +110,6 @@
 	path = vim/bundle/YouCompleteMe
 	url = https://github.com/Valloric/YouCompleteMe
 	ignore = dirty
+[submodule "vim/bundle/vundle"]
+	path = vim/bundle/vundle
+	url = https://github.com/gmarik/vundle.git
