Fix tmux command to support nested sessions

--- a/tmux/outer.conf
+++ b/tmux/outer.conf
@@ -26,3 +26,4 @@ set-option -g display-panes-active-colour blue
 set-option -g display-panes-colour brightred
 set-window-option -g clock-mode-colour green
 set-window-option -g window-status-bell-style fg=black,bg=red
+run-shell -b "tmux send-keys tmux Enter"
