--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore generated tags file
+tags
+tags.lock
+tags.temp
 # Ignore generated *.pyc files
 *.pyc
 # Ignore VIM undo files.
@@ -10,38 +14,5 @@ vim/view
 vim/data
 # Ignore VIM session files.
 vim/sessions
-# Transition plan for Vundle. Uncomment these one at a time as I switch them to
-# Vundle. Once done, uncomment out the last wildcard line.
-# vim/bundle/a.vim
-# vim/bundle/conque
-# vim/bundle/gundo
-# vim/bundle/sessionman
-# vim/bundle/vim-colors-solarized
-# vim/bundle/vimoutliner
-# vim/bundle/vim-unimpaired
-# vim/bundle/zencoding-vim
-# vim/bundle/bufexplorer
-# vim/bundle/ctrlp
-# vim/bundle/lusty
-# vim/bundle/speeddating
-# vim/bundle/vim-easymotion
-# vim/bundle/vim-powerline
-# vim/bundle/vim-visual-increment
-# vim/bundle/colorizer
-# vim/bundle/delimitMate
-# vim/bundle/NERD_tree
-# vim/bundle/syntastic
-# vim/bundle/vim-indent-guides
-# vim/bundle/vim-python-syntax
-# vim/bundle/vundle
-# vim/bundle/commentary
-# vim/bundle/fugitive
-# vim/bundle/repeat
-# vim/bundle/tagbar
-# vim/bundle/vim-indent-object
-# vim/bundle/vim-surround
-# vim/bundle/YouCompleteMe
-# #######################
-vim/bundle/*
-!vim/bundle/vundle
-!vim/bundle/neobundle.vim
+# Ignore vim plugins installed/managed by vim-plug
+vim/plugged/*
