Allow different sized clients on tmux

--- a/tmux/shared.conf
+++ b/tmux/shared.conf
@@ -1,5 +1,6 @@
 # Shared tmux config
 
 setw -g mode-keys vi
+setw -g aggressive-resize on
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
