Hopefully bring this up to date with spf-13

--- a/kitty.conf
+++ b/kitty.conf
@@ -22,7 +22,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -36,7 +36,7 @@ font_size 16.0
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
 
-# symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
+symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3,U+1F512 PowerlineSymbols
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
@@ -59,7 +59,11 @@ font_size 16.0
 
 #: Cursor customization {{{
 
-cursor #93a1a1
+#: Solarized Dark (unused)
+#cursor #93a1a1
+
+#: Solarized Light
+cursor #586e75
 
 #: Default cursor color
 
@@ -340,8 +344,16 @@ inactive_tab_background #999
 
 #: Color scheme {{{
 
-foreground #839496
+#foreground #839496
+#background #002b36
+
+#: Solarized Dark (unused)
 background #002b36
+foreground #839496
+
+#: Solarized Light
+background #fdf6e3
+foreground #657b83
 
 #: The foreground and background colors
 
@@ -369,8 +381,18 @@ background #002b36
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-selection_foreground #93a1a1
-selection_background #073642
+# Original colors
+#selection_foreground #93a1a1
+#selection_background #073642
+
+#: Solarized Dark (unused)
+#selection_background #81908f
+#selection_foreground #002831
+
+#: Solarized Light
+selection_background #475b62
+selection_foreground #eae3cb
+
 
 #: The foreground and background for text selected with the mouse
 
@@ -379,41 +401,81 @@ selection_background #073642
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
+#: Solarized Dark (unused)
+#color0 #073642
+#color8 #002b36
+
+#: Solarized Light
 color0 #073642
 color8 #002b36
 
 #: black
 
+#: Solarized Dark (unused)
+#color1 #dc322f
+#color9 #cb4b16
+
+#: Solarized Light
 color1 #dc322f
 color9 #cb4b16
 
 #: red
 
+#: Solarized Dark (unused)
+#color2  #859900
+#color10 #586e75
+
+#: Solarized Light
 color2  #859900
 color10 #586e75
 
 #: green
 
+#: Solarized Dark (unused)
+#color3  #b58900
+#color11 #657b83
+
+#: Solarized Light
 color3  #b58900
 color11 #657b83
 
 #: yellow
 
+#: Solarized Dark (unused)
+#color4  #268bd2
+#color12 #839496
+
+#: Solarized Light
 color4  #268bd2
 color12 #839496
 
 #: blue
 
+#: Solarized Dark (unused)
+#color5  #d33682
+#color13 #6c71c4
+
+#: Solarized Light
 color5  #d33682
 color13 #6c71c4
 
 #: magenta
 
+#: Solarized Dark (unused)
+#color6  #2aa198
+#color14 #93a1a1
+
+#: Solarized Light
 color6  #2aa198
 color14 #93a1a1
 
 #: cyan
 
+#: Solarized Dark (unused)
+#color7  #eee8d5
+#color15 #fdf6e3
+
+#: Solarized Light
 color7  #eee8d5
 color15 #fdf6e3
 
