--- a/bash/prompt.rc
+++ b/bash/prompt.rc
@@ -21,7 +21,7 @@ function __promptline_ps1 {
   slice_prefix="${b_bg}${sep}${b_fg}${b_bg}${space}" slice_suffix="$space${b_sep_fg}" slice_joiner="${b_fg}${b_bg}${alt_sep}${space}" slice_empty_prefix="${b_fg}${b_bg}${space}"
   [ $is_prompt_empty -eq 1 ] && slice_prefix="$slice_empty_prefix"
   # section "b" slices
-  __promptline_wrapper "$(echo $(printf \\xE2\\x8E\\x88) $(kubectx -c)$(echo :$(kubens -c) | sed -e s@^:default\$@@))" "$slice_prefix" "$slice_suffix" && { slice_prefix="$slice_joiner"; is_prompt_empty=0; }
+  __promptline_wrapper "$(__promptline_kube_context)" "$slice_prefix" "$slice_suffix" && { slice_prefix="$slice_joiner"; is_prompt_empty=0; }
 
   # section "c" header
   slice_prefix="${c_bg}${sep}${c_fg}${c_bg}${space}" slice_suffix="$space${c_sep_fg}" slice_joiner="${c_fg}${c_bg}${alt_sep}${space}" slice_empty_prefix="${c_fg}${c_bg}${space}"
@@ -37,6 +37,27 @@ function __promptline_ps1 {
 
   # close sections
   printf "%s" "${reset_bg}${sep}$reset$space"
+}
+function __promptline_kube_context {
+  local context
+  local context_symbol="$(printf \\xE2\\x8E\\x88)"
+
+  # git
+  if hash kubectx 2>/dev/null; then
+    if context=$( { kubectx -c; } 2>/dev/null ); then
+      context=${context##*/}
+      printf "%s" "${context_symbol}${context:-unknown}"
+      if hash kubens 2>/dev/null; then
+        if namespace=$( { kubens -c; } 2>/dev/null ); then
+	  if namespace != "default"; then
+            printf "%s" ":${namespace:-unknown}"
+	  fi
+	fi
+      fi
+      return
+    fi
+  fi
+  return 1
 }
 function __promptline_vcs_branch {
   local branch
@@ -65,7 +86,7 @@ function __promptline_left_prompt {
   slice_prefix="${b_bg}${sep}${b_fg}${b_bg}${space}" slice_suffix="$space${b_sep_fg}" slice_joiner="${b_fg}${b_bg}${alt_sep}${space}" slice_empty_prefix="${b_fg}${b_bg}${space}"
   [ $is_prompt_empty -eq 1 ] && slice_prefix="$slice_empty_prefix"
   # section "b" slices
-  __promptline_wrapper "$(echo $(printf \\xE2\\x8E\\x88) $(kubectx -c)$(echo :$(kubens -c) | sed -e s@^:default\$@@))" "$slice_prefix" "$slice_suffix" && { slice_prefix="$slice_joiner"; is_prompt_empty=0; }
+  __promptline_wrapper "$(echo $(printf \\xE2\\x8E\\x88) $(kubectx -c &> /dev/null && kubectx -c || echo '<none>')$(echo :$(kubens -c &> /dev/null && kubens -c || echo '') | sed -e s@^:default\$@@))" "$slice_prefix" "$slice_suffix" && { slice_prefix="$slice_joiner"; is_prompt_empty=0; }
 
   # section "c" header
   slice_prefix="${c_bg}${sep}${c_fg}${c_bg}${space}" slice_suffix="$space${c_sep_fg}" slice_joiner="${c_fg}${c_bg}${alt_sep}${space}" slice_empty_prefix="${c_fg}${c_bg}${space}"
